{
  "version": 4,
  "terraform_version": "1.5.4",
  "serial": 1040,
  "lineage": "41460ba0-0cf8-c4e1-dd8e-00b60e922d43",
  "resources": [
    {
      "mode": "managed",
      "type": "kubernetes_ingress_v1",
      "name": "kafka_rest_proxy_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "default/kafka-rest-proxy-ingress",
            "metadata": [
              {
                "annotations": {
                  "nginx.ingress.kubernetes.io/rewrite-target": "/$2",
                  "nginx.ingress.kubernetes.io/use-regex": "true"
                },
                "generate_name": "",
                "generation": 1,
                "labels": {},
                "name": "kafka-rest-proxy-ingress",
                "namespace": "default",
                "resource_version": "1443",
                "uid": "20814c8e-48be-4171-8171-0b3a91898ff1"
              }
            ],
            "spec": [
              {
                "default_backend": [],
                "ingress_class_name": "nginx",
                "rule": [
                  {
                    "host": "localhost",
                    "http": [
                      {
                        "path": [
                          {
                            "backend": [
                              {
                                "resource": [],
                                "service": [
                                  {
                                    "name": "kafka-rest-proxy",
                                    "port": [
                                      {
                                        "name": "",
                                        "number": 8082
                                      }
                                    ]
                                  }
                                ]
                              }
                            ],
                            "path": "/kafka-rest-proxy(/|$)(.*)",
                            "path_type": "ImplementationSpecific"
                          },
                          {
                            "backend": [
                              {
                                "resource": [],
                                "service": [
                                  {
                                    "name": "kiali",
                                    "port": [
                                      {
                                        "name": "",
                                        "number": 20001
                                      }
                                    ]
                                  }
                                ]
                              }
                            ],
                            "path": "/kiali(/|$)(.*)",
                            "path_type": "Prefix"
                          }
                        ]
                      }
                    ]
                  }
                ],
                "tls": []
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                    "ingress": [
                      {
                        "hostname": "",
                        "ip": "10.96.166.51"
                      }
                    ]
                  }
                ]
              }
            ],
            "timeouts": null,
            "wait_for_load_balancer": false
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_ingress_v1",
      "name": "keycloak_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "default/keycloak-ingress",
            "metadata": [
              {
                "annotations": {},
                "generate_name": "",
                "generation": 4,
                "labels": {},
                "name": "keycloak-ingress",
                "namespace": "default",
                "resource_version": "1452433",
                "uid": "4aa8ebb6-dbea-4890-b29a-a386f5ff609b"
              }
            ],
            "spec": [
              {
                "default_backend": [],
                "ingress_class_name": "nginx",
                "rule": [
                  {
                    "host": "localhost",
                    "http": [
                      {
                        "path": [
                          {
                            "backend": [
                              {
                                "resource": [],
                                "service": [
                                  {
                                    "name": "kafka-ui",
                                    "port": [
                                      {
                                        "name": "",
                                        "number": 80
                                      }
                                    ]
                                  }
                                ]
                              }
                            ],
                            "path": "/",
                            "path_type": "ImplementationSpecific"
                          },
                          {
                            "backend": [
                              {
                                "resource": [],
                                "service": [
                                  {
                                    "name": "keycloak",
                                    "port": [
                                      {
                                        "name": "",
                                        "number": 8080
                                      }
                                    ]
                                  }
                                ]
                              }
                            ],
                            "path": "/keycloak",
                            "path_type": "ImplementationSpecific"
                          },
                          {
                            "backend": [
                              {
                                "resource": [],
                                "service": [
                                  {
                                    "name": "mm-kafka",
                                    "port": [
                                      {
                                        "name": "",
                                        "number": 9092
                                      }
                                    ]
                                  }
                                ]
                              }
                            ],
                            "path": "/kafka",
                            "path_type": "ImplementationSpecific"
                          },
                          {
                            "backend": [
                              {
                                "resource": [],
                                "service": [
                                  {
                                    "name": "minio",
                                    "port": [
                                      {
                                        "name": "",
                                        "number": 9000
                                      }
                                    ]
                                  }
                                ]
                              }
                            ],
                            "path": "/minio",
                            "path_type": "ImplementationSpecific"
                          }
                        ]
                      }
                    ]
                  }
                ],
                "tls": []
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                    "ingress": [
                      {
                        "hostname": "",
                        "ip": "10.96.166.51"
                      }
                    ]
                  }
                ]
              }
            ],
            "timeouts": null,
            "wait_for_load_balancer": false
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_namespace",
      "name": "istio_service_mesh",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "istio-service-mesh",
            "metadata": [
              {
                "generation": 0,
                "labels": {
                  "istio-injection": "true"
                },
                "name": "istio-service-mesh",
                "resource_version": "616",
                "uid": "88fbb94e-b2fb-4c35-bbb3-7ce251252be7"
              }
            ],
            "wait_for_default_service_account": false
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_namespace",
      "name": "istio_system",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "istio-system",
            "metadata": [
              {
                "generation": 0,
                "labels": {
                  "istio-injection": "true"
                },
                "name": "istio-system",
                "resource_version": "570",
                "uid": "a6db9b19-5eb1-438b-8cfa-45d0e09caf2a"
              }
            ],
            "wait_for_default_service_account": false
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_namespace",
      "name": "opa_istio_service_mesh",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "opa-istio",
            "metadata": [
              {
                "generation": 0,
                "name": "opa-istio",
                "resource_version": "606",
                "uid": "940c7077-7624-4407-a2a9-9c1e2a897a08"
              }
            ],
            "wait_for_default_service_account": false
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_service",
      "name": "admission_controller",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "opa-istio/admission-controller",
            "metadata": [
              {
                "generation": 0,
                "labels": {
                  "app": "admission-controller"
                },
                "name": "admission-controller",
                "namespace": "opa-istio",
                "resource_version": "612",
                "uid": "554fc65c-e503-45b0-acae-5e0e5fb2f2bb"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "10.96.186.147",
                "cluster_ips": [
                  "10.96.186.147"
                ],
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "name": "https",
                    "node_port": 0,
                    "port": 443,
                    "protocol": "TCP",
                    "target_port": "8443"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app": "admission-controller"
                },
                "session_affinity": "None",
                "type": "ClusterIP"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_service",
      "name": "kafka_rest_proxy",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "default/kafka-rest-proxy",
            "metadata": [
              {
                "generation": 0,
                "name": "kafka-rest-proxy",
                "namespace": "default",
                "resource_version": "595",
                "uid": "64c10bbd-5586-4635-befa-8372d9684641"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "10.96.145.241",
                "cluster_ips": [
                  "10.96.145.241"
                ],
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "node_port": 0,
                    "port": 8082,
                    "protocol": "TCP",
                    "target_port": "8082"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app": "kafka-rest-proxy"
                },
                "session_affinity": "None",
                "type": "ClusterIP"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_service",
      "name": "keycloak",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "default/keycloak",
            "metadata": [
              {
                "generation": 0,
                "labels": {
                  "app": "keycloak"
                },
                "name": "keycloak",
                "namespace": "default",
                "resource_version": "573",
                "uid": "e387add4-3832-49eb-b7df-57ce0c480f79"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "10.96.123.167",
                "cluster_ips": [
                  "10.96.123.167"
                ],
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "name": "http",
                    "node_port": 0,
                    "port": 8080,
                    "protocol": "TCP",
                    "target_port": "8080"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app": "keycloak"
                },
                "session_affinity": "None",
                "type": "ClusterIP"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          }
        }
      ]
    }
  ]
}